Remove RestoreFocusedView in OnWindowActivated for DesktopNativeWidgetAura

RestoreFocusedView upon desktop native widget activation should be done in DesktopNativeWidgetAura::HandleActivationChanged, instead of OnWindowActivated, as in OnWindowActivated, GetWidget()->IsActive() is asynced for Linux. So we should remove the related code.

BUG=659080
TEST=manual build test sees bug fixed

Review-Url: https://codereview.chromium.org/2451323002
Cr-Commit-Position: refs/heads/master@{#428157}

Former-commit-id: c5e551b4da8b4bf7cc8fcfbdff3a052f19619bf3